--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
     "expo": "~46.0.13",
@@ -16,10 +17,14 @@
     "expo-updates": "~0.14.6",
     "firebase": "9.6.11",
     "react": "18.0.0",
+    "react_native_mqtt": "^1.3.1",
     "react-native": "0.69.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0"
+    "react-native-screens": "~3.15.0",
+    "react-native-super-grid": "^4.6.1",
+    "react-native-svg": "^12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
